--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "@babel/core": "^7.28.4",
     "@babel/preset-env": "^7.28.3",
     "@babel/preset-typescript": "^7.27.1",
+    "@eslint/js": "^9.37.0",
+    "globals": "^16.4.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.0",
+    "@stylistic/eslint-plugin": "^5.4.0",
+    "eslint": "^9.37.0"
   },
   "scripts": {
     "test": "jest"
