--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
     "outDir": "./dist",
-    "module": "nodenext",
-    "target": "esnext",
+    "module": "es2022",
+    "target": "es2024",
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
@@ -15,6 +15,7 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
+    "moduleResolution": "node"
   },
   "files": [
     "src/index.ts"
